syntax = "proto3";
package proto;

// import "eslintmessage.proto";

message EsLintRequest {
    string fileContent = 1;
    string fileName = 2;  
}

message EsLintResponse {
    string errors = 1;
}

service EsLintService {
    rpc LintFile(EsLintRequest) returns (EsLintResponse);
}